--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -37,6 +37,10 @@ main {
     line-height: 1.75;
     font-size: 1rem;
     width: 100%;
+    margin-bottom: 9rem;
+  }
+  h1{
+    margin-top: 45%;
   }
 }
 
